--- a/br_test_market_close/public/i18n/zh_cn.json
+++ b/br_test_market_close/public/i18n/zh_cn.json
@@ -80,7 +80,6 @@
     "165682516": "如果不介意分享，您还使用其他哪些交易平台？",
     "170185684": "忽略",
     "171307423": "恢复",
-    "171683420": "重设主密码",
     "176319758": "30天内最大总投注金额",
     "176654019": "$100,000 - $250,000",
     "179083332": "日期",
@@ -143,6 +142,7 @@
     "278684544": "从 # 从尾端获取子列表",
     "282319001": "查看您的图像",
     "284527272": "反众数",
+    "289898640": "TERMS OF USE",
     "292491635": "如果您选择“止损”并指定限制亏损的金额，那么当您的亏损大于或等于该金额时，您的头寸将自动平仓。您的损失可能大于您投入的金额，具体取决于收盘时的市场价格。",
     "292589175": "这将以烛形图列表显示指定周期内的简单移动平均线（SMA）。",
     "294305803": "账户设置管理",
@@ -237,8 +237,6 @@
     "438067535": "$500,000以上",
     "440529960": "设置密码",
     "442520703": "$250,001 - $500,000",
-    "443083339": "选择 DMT5 {{ account_type }} 账户的密码",
-    "443933119": "至少八个大小写英文字母和数字",
     "444484637": "逻辑求反",
     "451852761": "用您的电话继续操作",
     "452054360": "和相对强弱指数（RSI）相似，此程序块给您提供输入列表中每一项目的数值列表。",
@@ -339,6 +337,7 @@
     "626175020": "标准偏差上涨乘数{{ input_number }}",
     "626809456": "重新提交",
     "627292452": "<0>您的身份证明或地址证明</0> 不符合我们的要求。请检查您的电子邮件收取进一步指示。",
+    "627526394": "All you need from now is one password",
     "627814558": "如果条件为真，此程序块将返回一个值。在以上任一函数块中使用此程序块。",
     "629145209": "如果选择了“AND”操作，则仅当两个给定值均为“真”时，程序块才返回“真”",
     "632398049": "此程序块给项目或语句分配空值。",
@@ -427,7 +426,6 @@
     "762051686": "保证金 (MetaTrader 5)",
     "764540515": "停用机器人存在风险",
     "766317539": "语言",
-    "766682425": "此期间您没有交易活动。",
     "773091074": "投注资金:",
     "773309981": "原油/美元",
     "776085955": "策略",
@@ -473,6 +471,7 @@
     "835058671": "买入价总计",
     "835350845": "加上一两个字。不常见的词更好。",
     "837066896": "您的文件正在审查中，请于1-3天后再查看。",
+    "839618971": "ADDRESS",
     "839805709": "为了顺利验证，我们需要更好的照片",
     "843508407": "差价合约和保证金交易的一体式多资产交易平台。",
     "845213721": "注销",
@@ -482,6 +481,7 @@
     "851508288": "此程序块含设置范围内的指定数字。",
     "852583045": "跳动点列表字符串",
     "854399751": "数字代码必须只含数目字。",
+    "856713568": "Too many failed attempt",
     "857986403": "做些什么",
     "860319618": "旅游",
     "862283602": "电话号码*",
@@ -528,6 +528,7 @@
     "931619246": "支持的平台:",
     "933126306": "此处输入文本",
     "934835052": "潜在利润",
+    "934932936": "PERSONAL",
     "937237342": "策略名称不可为空",
     "937831119": "姓氏*",
     "937992258": "表",
@@ -602,6 +603,7 @@
     "1048947317": "对不起，此应用在{{clients_country}} 无法使用。",
     "1049384824": "上升",
     "1050844889": "报表",
+    "1052137359": "Family name*",
     "1053159279": "教育水平",
     "1055313820": "未检测到文件",
     "1056325608": "您已创建了 DMT5 {{account_title}} 账户。",
@@ -656,6 +658,7 @@
     "1134879544": "带有眩光的文档示例",
     "1143730031": "方向为 {{ direction_type }}",
     "1144028300": "相对强度指标数组 (RSIA)",
+    "1144288893": "We’ve upgraded our system to support a single, more secure password across Deriv. Once you’ve set a new password, you can use it to log into all your Deriv and DMT5 accounts.",
     "1145927365": "在指定秒数后运行内部程序块",
     "1151964318": "两边",
     "1154021400": "列表",
@@ -810,6 +813,8 @@
     "1367023655": "为确保您的亏损不超过您的投注金额，当亏损等于<0/>时，您的合约将自动平仓。",
     "1367488817": "4. 重启交易条件",
     "1367990698": "波动率 10 指数",
+    "1368002992": "Go to Settings",
+    "1369709538": "Our terms of use",
     "1371193412": "取消",
     "1371641641": "用手机打开链接",
     "1374627690": "最大账户余额",
@@ -868,14 +873,12 @@
     "1442840749": "随机整数",
     "1443478428": "选定的建议并不存在",
     "1445592224": "您不小心给了我们另一个电子邮件地址（通常非您本意，而是属于工作或个人性质的）。",
-    "1447329337": "选择您要交易的合约类型。例如，对于“上涨/下跌”交易类型，您可以选择以下三选项之一：“上涨”，“下跌”或“两者都选”。选定的选项将确定“购入”程序块的可用选项。",
     "1452260922": "失败尝试次数太多",
     "1452941569": "此程序块将以给定的秒数时间延迟执行。您可以在此程序块中放置任何程序块。策略中其他程序块的执行将被暂停，直到此程序块的指令执行完毕为止。",
     "1453317405": "此程序块以数字或文本字符串向您提供账户余额。",
     "1453362009": "Deriv 账户",
     "1453415617": "开立 DMT5 真实金融 STP 账户",
     "1454648764": "交易参考 id",
-    "1455556119": "此期间您没有交易。",
     "1457603571": "没有通知",
     "1459761348": "提交身份证明",
     "1461323093": "在开发人员控制台中显示消息。",
@@ -897,6 +900,7 @@
     "1484336612": "此程序块用于终止或继续循环，并可以放置在循环块内任何位置。",
     "1490583127": "DBot还不可用于真实账户",
     "1491392301": "<0>卖价</0>: {{sold_for}}",
+    "1492686447": "Your MT5 Financial STP account will be opened through Deriv (FX) Ltd. All trading in this account is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA).",
     "1496810530": "英镑/澳元",
     "1497911454": "请将<0>30 天交易额限制</0>设置为删除存款限额。",
     "1499080621": "尝试执行无效的操作。",
@@ -921,6 +925,7 @@
     "1534796105": "取得变量值",
     "1539108340": "欧元指数",
     "1540585098": "拒绝",
+    "1541818425": "Reset password",
     "1541969455": "两个",
     "1544642951": "如果您选择“只会持续上涨”期权，只要入市现价后的价格持续上涨，您将获得赔付。如果期间内的价格有任何下跌或相等于之前的价格， 您将不会获得赔付。",
     "1549098835": "提款总额",
@@ -1059,6 +1064,7 @@
     "1791971912": "最近",
     "1794815502": "下载您的交易历史。",
     "1801093206": "取得烛形线列表",
+    "1803338729": "Choose what type of contract you want to trade. For example, for the Rise/Fall trade type you can choose one of three options: Rise, Fall, or Both. Selected option will determine available options for the Purchase block.",
     "1804789128": "{{display_value}} 跳动点",
     "1806355993": "不收佣金",
     "1808058682": "程序块加载成功",
@@ -1075,7 +1081,7 @@
     "1815995250": "买入合约",
     "1817154864": "此程序块提供设置范围内的随机数字.",
     "1820242322": "例如美国",
-    "1820332333": "Top up",
+    "1820332333": "充值",
     "1823177196": "最热门",
     "1824193700": "此程序块提供最新跳动点数值的最后数字。",
     "1826278972": "税务识别号为必填项",
@@ -1130,6 +1136,7 @@
     "1903437648": "检测到模糊的照片",
     "1905032541": "我们现在准备验证您的身份",
     "1906639368": "如这是您首次尝试创建密码或您已忘了密码，请重置。",
+    "1908023954": "Sorry, an error occurred while processing your request.",
     "1908239019": "确保所有文档都在照片中",
     "1909769048": "中值",
     "1914014145": "今天",
@@ -1140,6 +1147,7 @@
     "1919030163": "好的自拍技巧",
     "1920217537": "比较",
     "1920468180": "如何使用SMA程序块",
+    "1921634159": "A few personal details",
     "1922529883": "兴旺 1000 指数",
     "1922955556": "使用更长的键盘列式并给予更多变化",
     "1923431535": "“止损”已被禁用，并且仅在“取消交易”到期时可用。",
@@ -1230,6 +1238,7 @@
     "2054500647": "此投诉政策可能会不时更改，适用于您在 Deriv (SVG) LLC 和 Deriv (V) Ltd 注册的账户。",
     "2054889300": "创建\"%1\"",
     "2055317803": "复制链接到您的手机浏览器",
+    "2056801626": "Confirm your password",
     "2057419639": "退市现价",
     "2062912059": "功能 {{ function_name }} {{ function_params }}",
     "2063655921": "透过购入“收盘至最低值”合约，您将赢取合约期间内乘数值乘以收盘与最低值之间的差额。",
@@ -1287,6 +1296,72 @@
     "2145690912": "赚取收入",
     "2146336100": "%1文本中获取%2",
     "2146892766": "二元期权交易经验",
+    "-2024100696": "真实综合",
+    "-744999940": "Deriv 账户",
+    "-1936757551": "Deriv 综合",
+    "-1546927062": "Deriv 金融",
+    "-2059862173": "地址第1行是必填项",
+    "-1493533190": "地址的格式不正确",
+    "-1560151576": "城市的格式不正确",
+    "-378415317": "州/区是必填项",
+    "-1784470716": "州/区的格式不正确",
+    "-1699820408": "请输入少于 {{{max_number}} 个字符的 {field_name}} 。",
+    "-1575567374": "邮政编码",
+    "-755626951": "完成您的地址资料",
+    "-1024240099": "地址",
+    "-584911871": "Select wallet currency",
+    "-1461267236": "请选择货币",
+    "-1352330125": "CURRENCY",
+    "-1027595143": "少于$25,000",
+    "-40491332": "$25,000 - $50,000",
+    "-1139806939": "$50,001 - $100,000",
+    "-626752657": "0-1 年",
+    "-532014689": "1-2 年",
+    "-1001024004": "3年以上",
+    "-790513277": "过去12个月内6-10次交易",
+    "-580085300": "过去12个月内11-39次交易",
+    "-654781670": "主要",
+    "-1717373258": "次要",
+    "-996132458": "建筑",
+    "-915003867": "健康",
+    "-1430012453": "信息和通信技术",
+    "-987824916": "科学 & 工程",
+    "-146630682": "社会 & 文化",
+    "-761306973": "制造",
+    "-739367071": "就业",
+    "-1156937070": "$500,001 - $1,000,000",
+    "-315534569": "大于$1,000,000",
+    "-2068544539": "受薪雇员",
+    "-531314998": "投资与分红",
+    "-1235114522": "养老金",
+    "-1298056749": "国家收益",
+    "-449943381": "储蓄和继承",
+    "-1631552645": "专业人士",
+    "-474864470": "个人护理、销售及服务员工",
+    "-1129355784": "农业、林业和渔业工人",
+    "-1242914994": "工艺、金属、电气和电子工人",
+    "-1317824715": "清洁工和佣工",
+    "-1592729751": "矿业、建筑业、制造业和运输工人",
+    "-2137323480": "公司所有权",
+    "-1590574533": "离婚协议",
+    "-1667683002": "继承",
+    "-1237843731": "投资收入",
+    "-777506574": "财产出售",
+    "-692343440": "开立账户的原因是必填项",
+    "-1170778666": "称呼是必填项",
+    "-228584268": "名字长度须介于 2至30 个字符。",
+    "-201790992": "出生日期为必填项",
+    "-26599672": "国籍是必填项",
+    "-1575444613": "电话号是必填项",
+    "-243149737": "电话号须介于 8至35 个数字。",
+    "-2046147698": "请填写税务居住地",
+    "-1356204661": "此税务识别号(TIN) 无效。您可继续开立账户的操作，但有必要提供有效的税务信息，使将来的付款程序更加方便。",
+    "-1823540512": "个人资料",
+    "-1227878799": "投机",
+    "-1174064217": "先生",
+    "-855506127": "女士",
+    "-1037916704": "小姐",
+    "-204765990": "使用条款",
     "-931052769": "提交验证",
     "-1004605898": "提示",
     "-1938142055": "文档已上传",
@@ -1380,50 +1455,25 @@
     "-1462975230": "文档示例",
     "-1472844935": "照片须清楚显示您的文件",
     "-883103549": "账户已停用",
-    "-1823540512": "个人资料",
     "-1466827732": "自我禁止",
     "-1498206510": "账户限额",
     "-241588481": "登录历史",
     "-966136867": "已连接的应用",
     "-213009361": "双因素身份验证",
     "-526636259": "错误 404",
-    "-2068544539": "受薪雇员",
-    "-531314998": "投资与分红",
-    "-1235114522": "养老金",
-    "-1298056749": "国家收益",
-    "-449943381": "储蓄和继承",
-    "-739367071": "就业",
-    "-996132458": "建筑",
-    "-915003867": "健康",
-    "-1430012453": "信息和通信技术",
-    "-987824916": "科学 & 工程",
-    "-146630682": "社会 & 文化",
-    "-761306973": "制造",
-    "-1631552645": "专业人士",
-    "-474864470": "个人护理、销售及服务员工",
-    "-1129355784": "农业、林业和渔业工人",
-    "-1242914994": "工艺、金属、电气和电子工人",
-    "-1317824715": "清洁工和佣工",
-    "-1592729751": "矿业、建筑业、制造业和运输工人",
     "-1030759620": "政府官员",
-    "-2137323480": "公司所有权",
-    "-1590574533": "离婚协议",
-    "-1667683002": "继承",
-    "-1237843731": "投资收入",
-    "-777506574": "财产出售",
-    "-654781670": "主要",
-    "-1717373258": "次要",
-    "-1027595143": "少于$25,000",
-    "-40491332": "$25,000 - $50,000",
-    "-1139806939": "$50,001 - $100,000",
-    "-1156937070": "$500,001 - $1,000,000",
-    "-315534569": "大于$1,000,000",
-    "-626752657": "0-1 年",
-    "-532014689": "1-2 年",
-    "-1001024004": "3年以上",
-    "-790513277": "过去12个月内6-10次交易",
-    "-580085300": "过去12个月内11-39次交易",
-    "-1227878799": "投机",
+    "-1662154767": "近期的水电费账单（例如电费、水费、煤气费、固定电话费或互联网费），银行对账单或政府签发的带有您的姓名和地址的信件。",
+    "-190838815": "We need this for verification. If the information you provide is fake or inaccurate, you won’t be able to deposit and withdraw.",
+    "-223216785": "Second line of address*",
+    "-594456225": "地址第二行",
+    "-1315410953": "州/省",
+    "-1940457555": "Postal/ZIP Code*",
+    "-1964954030": "邮政编码",
+    "-1541554430": "下一页",
+    "-71696502": "之前",
+    "-1146960797": "法定货币",
+    "-1959484303": "加密货币",
+    "-1319246342": "作为ERC20代币（eUSDT）的Tether是托管在以太坊（任何人都可以构建和部署去中心化应用程序的开放软件平台）上的Tether版本。",
     "-2087317410": "糟糕，出错了。",
     "-433415967": "包含您的姓名和地址的近期银行月结单或由政府出具的信函",
     "-587941902": "用您的名字和您的当前地址签发",
@@ -1433,9 +1483,26 @@
     "-723198394": "文件大小不可大于8MB",
     "-1948369500": "上传的文件不受支持",
     "-1040865880": "此处拖放文件...",
+    "-1100235269": "职业领域",
+    "-684388823": "估计净值",
+    "-509054266": "预期的年交易额",
+    "-601903492": "外汇交易经验",
+    "-1012699451": "差价合约交易经验",
+    "-1437017790": "金融信息",
+    "-39038029": "交易经验",
     "-38915613": "未保存更改",
     "-2137450250": "您有未保存更改。确定放弃更改并离开此页面？",
     "-1067082004": "退出设置",
+    "-1120954663": "名*",
+    "-1659980292": "名",
+    "-1857534296": "John",
+    "-1485480657": "其他详细资料",
+    "-1315571766": "出生地点",
+    "-2040322967": "公民身份",
+    "-1692219415": "纳税居住地",
+    "-1903720068": "您符合纳税条件的国家/地区。通常是您实际居住的国家/地区。",
+    "-651516152": "税务识别编号",
+    "-1387062433": "开立账户的原因",
     "-1451334536": "继续交易",
     "-1525879032": "您的地址证明文件已过期。 请重新提交。",
     "-1425489838": "不需要地址证明验证",
@@ -1451,6 +1518,20 @@
     "-1785463422": "身份验证",
     "-337979330": "您的身份证明无法验证",
     "-856213726": "您还必须提交地址证明。",
+    "-1890437681": "上传文件",
+    "-203002433": "立刻存款",
+    "-1768223277": "您的账户已就绪",
+    "-1614090004": "地址证明验证失败",
+    "-1703155190": "身份和地址证明验证失败",
+    "-1590597068": "您的身份和地址证明已成功提交",
+    "-1134947851": "开始交易前，我们需要您的身份和地址证明。",
+    "-1275327471": "无法验证您的地址证明文件。 您可以上传新文档，然后重试。",
+    "-1534810266": "无法验证您的身份和地址证明文件。 您可以上传新文档，然后重试。",
+    "-2073934245": "本网站提供的金融交易服务仅适合这样的客户：能够接受全部投入资金亏损的可能性，了解购买金融合约的风险并具有相关经验。金融合约交易有很高的风险。如果购买的合约到期时一文不值，您将损失全部投资，包括合约费用。",
+    "-1970096931": "您的账户将通过 Deriv (Europe) Limited 开立， 并由马耳他博彩机构监管，以及受马耳他的法律管辖。",
+    "-1988735853": "您的账户将通过 Deriv Investments (Europe) Limited 开立，并由马耳他金融服务机构(MFSA) 监管，以及受马耳他的法律管辖。",
+    "-2068229627": "本人不是政治公众人士，而且在过去的12个月中，我未曾当过政治公众人士。",
+    "-1125193491": "添加账户",
     "-763249420": "{{page_title}} 页面仅<0 />现有客户可用。",
     "-207063174": "如果您有活跃的账户, 请<0>登录</0>以获得完整的访问权限。否则请<1>注册</1>以开始交易。",
     "-2139303636": "可能您使用的链接已无效，或该页面已转移到新地址。",
@@ -1458,30 +1539,16 @@
     "-1265833982": "接受",
     "-839094775": "返回",
     "-2145244263": "此为必填字段",
-    "-1437017790": "金融信息",
-    "-1100235269": "职业领域",
-    "-684388823": "估计净值",
-    "-39038029": "交易经验",
-    "-601903492": "外汇交易经验",
-    "-1012699451": "差价合约交易经验",
     "-1894668798": "其他交易工具经验",
     "-1026468600": "其他交易工具频率",
     "-1651554702": "只允许字母",
     "-2128137611": "应以字母或数字开始，可包含连字符和下划线。",
     "-1458676679": "您必须输入2-50个字符。",
     "-884768257": "您必须输入0-35个字符。",
-    "-1784470716": "州/区的格式不正确",
-    "-1699820408": "请输入少于 {{{max_number}} 个字符的 {field_name}} 。",
-    "-1575567374": "邮政编码",
     "-2113555886": "只允许字母、数字、空格和连字符。",
     "-1113902570": "详情",
-    "-1120954663": "名*",
-    "-1315571766": "出生地点",
-    "-2040322967": "公民身份",
     "-136976514": "居住国*",
-    "-1387062433": "开立账户的原因",
     "-789291456": "纳税居留地*",
-    "-1024240099": "地址",
     "-1702919018": "地址第二行（可选）",
     "-1958764604": "电子邮件设置",
     "-2068064150": "接收与Deriv产品、服务和活动相关的更新。",
@@ -1534,7 +1601,7 @@
     "-1900331904": "您将自动注销。",
     "-163034935": "您将<0>无法</0>再次登录。",
     "-1318334333": "停用",
-    "-1219849101": "Please select at least one reason",
+    "-1219849101": "请选择至少一个原因",
     "-484540402": "发生错误",
     "-1911549768": "MT5 账户无法访问",
     "-1869355019": "需要展开行动",
@@ -1551,6 +1618,7 @@
     "-1738671831": "密码长度须介于 8至25 个字符。",
     "-1776746512": "当前密码和新密码不能相同。",
     "-1465674403": "更改Deriv密码",
+    "-1233938428": "We recommend using a unique password — one that you don’t use for any other sites.",
     "-1868608634": "当前密码",
     "-89973258": "{{seconds}}后重发电子邮件",
     "-1617352279": "邮件在您的垃圾邮箱（有时一些邮件会误送到那儿）。",
@@ -1672,8 +1740,6 @@
     "-1616649196": "结果",
     "-90107030": "未发现结果",
     "-984140537": "添加",
-    "-71696502": "之前",
-    "-1541554430": "下一页",
     "-870004399": "<0>已购入</0>: {{longcode}} (ID: {{transaction_id}})",
     "-1211474415": "筛选器",
     "-186972150": "没有要显示的消息",
@@ -1757,31 +1823,8 @@
     "-1309011360": "空缺",
     "-679102561": "合约细节",
     "-430118939": "控诉政策",
-    "-2059862173": "地址第1行是必填项",
-    "-1493533190": "地址的格式不正确",
-    "-1560151576": "城市的格式不正确",
-    "-378415317": "州/区是必填项",
-    "-755626951": "完成您的地址资料",
-    "-1461267236": "请选择货币",
-    "-2024100696": "真实综合",
-    "-744999940": "Deriv 账户",
-    "-1936757551": "Deriv 综合",
-    "-1546927062": "Deriv 金融",
-    "-692343440": "开立账户的原因是必填项",
-    "-1170778666": "称呼是必填项",
-    "-228584268": "名字长度须介于 2至30 个字符。",
-    "-201790992": "出生日期为必填项",
-    "-26599672": "国籍是必填项",
-    "-1575444613": "电话号是必填项",
-    "-243149737": "电话号须介于 8至35 个数字。",
-    "-2046147698": "请填写税务居住地",
-    "-1356204661": "此税务识别号(TIN) 无效。您可继续开立账户的操作，但有必要提供有效的税务信息，使将来的付款程序更加方便。",
-    "-1174064217": "先生",
-    "-855506127": "女士",
-    "-1037916704": "小姐",
     "-895331276": "请完成您的地址证明",
     "-782679300": "请完成您的身份证明",
-    "-204765990": "使用条款",
     "-1669418686": "澳元/加元",
     "-1548588249": "澳元/瑞士法郎",
     "-1552890620": "澳元/日元",
@@ -1942,45 +1985,17 @@
     "-1829842622": "您可以为每种加密货币开立账户。",
     "-2120454054": "添加真实账户",
     "-987221110": "选择您想要交易的货币。",
-    "-1959484303": "加密货币",
-    "-1125193491": "添加账户",
-    "-1146960797": "法定货币",
     "-252990905": "货币更改不可用，因为您已经将钱存入了{{currency}} 账户，或您已经创建了真实的 MetaTrader 5 (MT5) 账户。",
     "-200560194": "请切换到{{fiat_currency}} 账户以更改币种。",
-    "-1662154767": "近期的水电费账单（例如电费、水费、煤气费、固定电话费或互联网费），银行对账单或政府签发的带有您的姓名和地址的信件。",
-    "-594456225": "地址第二行",
-    "-1315410953": "州/省",
-    "-1964954030": "邮政编码",
     "-1829493739": "选择您想要交易的货币。",
-    "-1319246342": "作为ERC20代币（eUSDT）的Tether是托管在以太坊（任何人都可以构建和部署去中心化应用程序的开放软件平台）上的Tether版本。",
-    "-509054266": "预期的年交易额",
     "-1215717784": "<0>您已成功将币种改成{{currency}}。</0><0>请立刻存款，开始交易。</0>",
-    "-203002433": "立刻存款",
-    "-1890437681": "上传文件",
-    "-1768223277": "您的账户已就绪",
-    "-1614090004": "地址证明验证失败",
-    "-1703155190": "身份和地址证明验证失败",
-    "-1590597068": "您的身份和地址证明已成功提交",
-    "-1134947851": "开始交易前，我们需要您的身份和地址证明。",
-    "-1275327471": "无法验证您的地址证明文件。 您可以上传新文档，然后重试。",
-    "-1534810266": "无法验证您的身份和地址证明文件。 您可以上传新文档，然后重试。",
     "-952649119": "登录",
     "-3815578": "注册",
-    "-1659980292": "名",
-    "-1857534296": "John",
-    "-1485480657": "其他详细资料",
-    "-1692219415": "纳税居住地",
-    "-1903720068": "您符合纳税条件的国家/地区。通常是您实际居住的国家/地区。",
-    "-651516152": "税务识别编号",
     "-1456176427": "为您的真实账户设置币种",
     "-259386249": "添加 Deriv 综合账户",
     "-241733171": "添加 Deriv 金融账户",
     "-1369294608": "已经注册？",
     "-617844567": "已有账户具有您的详细信息。",
-    "-2073934245": "本网站提供的金融交易服务仅适合这样的客户：能够接受全部投入资金亏损的可能性，了解购买金融合约的风险并具有相关经验。金融合约交易有很高的风险。如果购买的合约到期时一文不值，您将损失全部投资，包括合约费用。",
-    "-1970096931": "您的账户将通过 Deriv (Europe) Limited 开立， 并由马耳他博彩机构监管，以及受马耳他的法律管辖。",
-    "-1988735853": "您的账户将通过 Deriv Investments (Europe) Limited 开立，并由马耳他金融服务机构(MFSA) 监管，以及受马耳他的法律管辖。",
-    "-2068229627": "本人不是政治公众人士，而且在过去的12个月中，我未曾当过政治公众人士。",
     "-292363402": "交易统计报表",
     "-1656860130": "二元期权交易和其他类似活动一样，过于沉迷可能会上瘾。为了避免这种风险，我们会定期向您提供交易和财务的实况简报。",
     "-28080461": "想先检查一下您的月结单？<0>检查月结单</0>",
@@ -2188,12 +2203,16 @@
     "-382495564": "密码已更改",
     "-2042845290": "您的投资者密码已被更改.",
     "-1882295407": "您的密码已被更改。",
+    "-985529779": "Your DMT5 password is now the same as your Deriv account login password. To reset, please go to <0>Settings</0> page to change your password.",
     "-254497873": "用此密码给予其他用户查看权限。当该用户查看您的交易账户时将无法交易或采取任何其他行动。",
     "-161656683": "当前投资者密码",
     "-374736923": "新投资者密码",
     "-1793894323": "创建或重置投资者密码",
     "-1444706724": "管理 DMT5 真实 {{account_title}} 账户密码",
-    "-1880679339": "您的 MT5 金融 STP 账户将通过 Deriv（FX）Ltd 开立。该账户的所有交易均受 Labuan 金融服务管理局（LFSA）的规定和准则的约束。所有其他账户，包括您的衍生账户，均不受 Labuan 金融服务管理局（LFSA）的法规和准则的约束。",
+    "-1234339445": "All you’ll need from now is one password",
+    "-1418023997": "Unavailable because of too many failed attempts. Please try again in a minute or reset your account password to continue.",
+    "-140300511": "Please confirm your Deriv password to create a DMT5 account. If you’ve forgotten your password, click <0>Reset password</0>.",
+    "-1987408434": "Your MT5 Financial STP account will be opened through Deriv (BVI) Ltd. All trading in this account is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC).",
     "-1281078994": "选择 DMT5 {{ account_type }} 账户的服务器",
     "-1752211105": "立刻转汇",
     "-2115960164": "重设 DMT5 密码",
@@ -2206,6 +2225,9 @@
     "-1756858413": "<0></0>已记入您的 DMT5 {{title}} 账户 。",
     "-149993085": "当前新余额",
     "-538215347": "净存款",
+    "-280147477": "All transactions",
+    "-137444201": "买入",
+    "-360975483": "You've made no transactions of this type during this period.",
     "-1231210510": "跳动点",
     "-1239477911": "秒",
     "-1585766960": "最小",
@@ -2603,6 +2625,5 @@
     "-1521930919": "选择Binary Bot策略",
     "-845301264": "从 Google 云端硬盘列出文件时出错",
     "-1452908801": "从 Google 云端硬盘检索文件时出错",
-    "-232617824": "处理您的请求时出错",
-    "-137444201": "买入"
+    "-232617824": "处理您的请求时出错"
 }
