--- a/br_test_market_close/public/i18n/zh_tw.json
+++ b/br_test_market_close/public/i18n/zh_tw.json
@@ -80,7 +80,6 @@
     "165682516": "如果不介意共享，您還使用其他哪些交易平台？",
     "170185684": "忽略",
     "171307423": "復原",
-    "171683420": "重設主密碼",
     "176319758": "30天內最大總投注金額",
     "176654019": "$100,000 - $250,000",
     "179083332": "日期",
@@ -143,6 +142,7 @@
     "278684544": "從 # 從尾端獲取子清單",
     "282319001": "查看您的圖像",
     "284527272": "反眾數",
+    "289898640": "TERMS OF USE",
     "292491635": "如果您選擇「止損」並指定限制虧損的金額，那麼當您的虧損大於或等於該金額時，您的頭寸將自動平倉。您的損失可能大於您投入的金額，具體取決於收盤時的市場價格。",
     "292589175": "這將以燭形圖清單顯示指定週期內的簡單移動平均線（SMA）。",
     "294305803": "帳戶設定管理",
@@ -237,8 +237,6 @@
     "438067535": "$500,000以上",
     "440529960": "設定密碼",
     "442520703": "$250,001 - $500,000",
-    "443083339": "選擇 DMT5 {{ account_type }} 帳戶的密碼",
-    "443933119": "至少八個大小寫英文字母和數字",
     "444484637": "邏輯否定",
     "451852761": "用您的電話繼續操作",
     "452054360": "和相對強弱指數（RSI）相似，此區塊給您提供輸入清單中每一項目的數值清單。",
@@ -339,6 +337,7 @@
     "626175020": "標準偏差上漲乘數{{ input_number }}",
     "626809456": "重新提交",
     "627292452": "<0>您的身份證明或地址證明</0>不符合我們的要求。請檢查您的電子郵件收取進一步指示。",
+    "627526394": "All you need from now is one password",
     "627814558": "如果條件為真，此區塊將返回一個值。在以上任一函數塊中使用此區塊。",
     "629145209": "如果選擇了「AND」操作，則僅當兩個給定值均為「真」時，區塊才返回「真」",
     "632398049": "此區塊給項目或語句分配空值。",
@@ -427,7 +426,6 @@
     "762051686": "保證金 (MetaTrader 5)",
     "764540515": "停用機器人存在風險",
     "766317539": "語言",
-    "766682425": "此期間您沒有交易活動。",
     "773091074": "投注資金:",
     "773309981": "原油/美元",
     "776085955": "策略",
@@ -473,6 +471,7 @@
     "835058671": "買入價總計",
     "835350845": "加上一兩個字。不常見的詞更好。",
     "837066896": "您的文件正在審查中，請於1-3天後再檢視.",
+    "839618971": "ADDRESS",
     "839805709": "為了順利驗證，我們需要更好的照片",
     "843508407": "差價合約和保證金交易的一體式多資產交易平台。",
     "845213721": "登出",
@@ -482,6 +481,7 @@
     "851508288": "此區塊含設定範圍內的指定數字。",
     "852583045": "跳動點清單字串",
     "854399751": "數字代碼必須只含數目字。",
+    "856713568": "Too many failed attempt",
     "857986403": "做些甚麼",
     "860319618": "旅遊",
     "862283602": "電話號碼*",
@@ -528,6 +528,7 @@
     "931619246": "支持的平台:",
     "933126306": "此處輸入文字",
     "934835052": "潛在利潤",
+    "934932936": "PERSONAL",
     "937237342": "策略名稱不可為空",
     "937831119": "姓氏*",
     "937992258": "表",
@@ -602,6 +603,7 @@
     "1048947317": "對不起，此應用在 {{clients_country}} 無法使用。",
     "1049384824": "上漲",
     "1050844889": "報告",
+    "1052137359": "Family name*",
     "1053159279": "教育水準",
     "1055313820": "未偵測到文件",
     "1056325608": "您已建立了 DMT5 {{account_title}} 帳戶。",
@@ -656,6 +658,7 @@
     "1134879544": "帶有眩光的文檔示例",
     "1143730031": "方向為 {{ direction_type }}",
     "1144028300": "相對強度指標陣列(RSIA)",
+    "1144288893": "We’ve upgraded our system to support a single, more secure password across Deriv. Once you’ve set a new password, you can use it to log into all your Deriv and DMT5 accounts.",
     "1145927365": "指定秒數後運行內部區塊",
     "1151964318": "兩邊",
     "1154021400": "清單",
@@ -810,6 +813,8 @@
     "1367023655": "為確保您的虧損不超過您的投注金額，當虧損等於<0/>時，您的合約將自動平倉。",
     "1367488817": "4. 重啟交易條件",
     "1367990698": "波動率 10 指數",
+    "1368002992": "Go to Settings",
+    "1369709538": "Our terms of use",
     "1371193412": "取消",
     "1371641641": "用手機打開連結",
     "1374627690": "最大帳戶餘額",
@@ -868,14 +873,12 @@
     "1442840749": "隨機整數",
     "1443478428": "選定的建議並不存在",
     "1445592224": "您不小心給了我們另一個電子郵件地址（通常非您本意，而是屬於工作或個人性質的）。",
-    "1447329337": "選擇您要交易的合約類型。例如，對於「上漲/下跌」交易類型，您可以選擇以下三選項之一：「上漲」，「下跌」或「兩者都選」。選定的選項將確定「購入」區塊的可用選項。",
     "1452260922": "失敗嘗試次數太多",
     "1452941569": "此區塊將以給定的秒數時間延遲執行。您可以在此區塊中放置任何區塊。策略中其他區塊的執行將被暫停，直到此區塊的指令執行完畢為止。",
     "1453317405": "此區塊以數字或文字字串向您提供帳戶餘額。",
     "1453362009": "Deriv帳戶",
     "1453415617": "開立 DMT5 真實金融 STP 帳戶",
     "1454648764": "交易參考 id",
-    "1455556119": "此期間您沒有交易。",
     "1457603571": "沒有通知",
     "1459761348": "提交身份證明",
     "1461323093": "在開發人員主控台中顯示消息。",
@@ -897,6 +900,7 @@
     "1484336612": "此區塊用於終止或繼續迴圈，並可以放置在迴圈塊內任何位置。",
     "1490583127": "DBot還不可用於真實帳戶",
     "1491392301": "<0>賣價</0>: {{sold_for}}",
+    "1492686447": "Your MT5 Financial STP account will be opened through Deriv (FX) Ltd. All trading in this account is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the Labuan Financial Service Authority (LFSA).",
     "1496810530": "英鎊/澳元",
     "1497911454": "請將<0>30 天交易額限制</0> 設定為刪除存款限額。",
     "1499080621": "嘗試執行無效的操作。",
@@ -921,6 +925,7 @@
     "1534796105": "取得變數值",
     "1539108340": "歐元指數",
     "1540585098": "拒絕",
+    "1541818425": "Reset password",
     "1541969455": "兩個",
     "1544642951": "如果您選擇「只會持續上漲」期權，只要入市現價後的價格持續上漲，您將獲得賠付。如果期間內的價格有任何下跌或相等於之前的價格， 您將不會獲得賠付。",
     "1549098835": "提款總額",
@@ -1059,6 +1064,7 @@
     "1791971912": "最近",
     "1794815502": "下載您的交易歷史。",
     "1801093206": "取得蠟燭圖線清單",
+    "1803338729": "Choose what type of contract you want to trade. For example, for the Rise/Fall trade type you can choose one of three options: Rise, Fall, or Both. Selected option will determine available options for the Purchase block.",
     "1804789128": "{{display_value}} 跳動點",
     "1806355993": "不收佣金",
     "1808058682": "區塊載入成功",
@@ -1075,7 +1081,7 @@
     "1815995250": "買入合約",
     "1817154864": "此區塊提供設定範圍內的隨機數字。",
     "1820242322": "例如美國",
-    "1820332333": "Top up",
+    "1820332333": "充值",
     "1823177196": "最熱門",
     "1824193700": "此區塊提供最新跳動點數值的最後數字。",
     "1826278972": "稅務識別號碼為必填項",
@@ -1130,6 +1136,7 @@
     "1903437648": "偵測到模糊的照片",
     "1905032541": "我們現在準備驗證您的身份",
     "1906639368": "如這是您首次嘗試建立密碼或您已忘了密碼，請重設。",
+    "1908023954": "Sorry, an error occurred while processing your request.",
     "1908239019": "確保所有文檔都在照片中",
     "1909769048": "中值",
     "1914014145": "今天",
@@ -1140,6 +1147,7 @@
     "1919030163": "好的自拍技巧",
     "1920217537": "比較",
     "1920468180": "如何使用SMA區塊",
+    "1921634159": "A few personal details",
     "1922529883": "興旺 1000 指數",
     "1922955556": "使用更長的鍵盤列式並給予更多變化",
     "1923431535": "「止損」已被禁用，並且僅在「取消交易」到期時可用。",
@@ -1230,6 +1238,7 @@
     "2054500647": "此投訴政策可能會不時更改，適用於您在 Deriv (SVG) LLC 和 Deriv (V) Ltd 註冊的帳戶。",
     "2054889300": "建立「%1」",
     "2055317803": "複製連結到您的手機瀏覽器",
+    "2056801626": "Confirm your password",
     "2057419639": "退市現價",
     "2062912059": "功能 {{ function_name }} {{ function_params }}",
     "2063655921": "透過購入「收盤至最低值」 合約，您將贏取合約期間內乘數值乘以收盤與最低值之間的差額。",
@@ -1287,6 +1296,72 @@
     "2145690912": "賺取收入",
     "2146336100": "%1文字中獲取%2",
     "2146892766": "二元期權交易經驗",
+    "-2024100696": "真實綜合",
+    "-744999940": "Deriv 帳戶",
+    "-1936757551": "Deriv 綜合",
+    "-1546927062": "Deriv 金融",
+    "-2059862173": "地址第1行是必填欄位",
+    "-1493533190": "地址的格式不正確",
+    "-1560151576": "城市的格式不正確",
+    "-378415317": "州/區為必填欄位",
+    "-1784470716": "州/區的格式不正確",
+    "-1699820408": "請輸入少於{{max_number}} 個字元的{{field_name}} 。",
+    "-1575567374": "郵遞區號",
+    "-755626951": "完成您的地址資料",
+    "-1024240099": "地址",
+    "-584911871": "Select wallet currency",
+    "-1461267236": "請選擇貨幣",
+    "-1352330125": "CURRENCY",
+    "-1027595143": "少於$25,000",
+    "-40491332": "$25,000 - $50,000",
+    "-1139806939": "$50,001 - $100,000",
+    "-626752657": "0-1 年",
+    "-532014689": "1-2 年",
+    "-1001024004": "3年以上",
+    "-790513277": "過去12個月內6-10次交易",
+    "-580085300": "過去12個月內11-39次交易",
+    "-654781670": "主要",
+    "-1717373258": "次要",
+    "-996132458": "建構",
+    "-915003867": "健康",
+    "-1430012453": "資訊和通信技術",
+    "-987824916": "科學 & 工程",
+    "-146630682": "社會 & 文化",
+    "-761306973": "製造",
+    "-739367071": "就業",
+    "-1156937070": "$500,001 - $1,000,000",
+    "-315534569": "大於$1,000,000",
+    "-2068544539": "支薪員工",
+    "-531314998": "投資與分紅",
+    "-1235114522": "退休金",
+    "-1298056749": "國家收益",
+    "-449943381": "儲蓄和繼承",
+    "-1631552645": "專業人士",
+    "-474864470": "個人護理、銷售及服務員工",
+    "-1129355784": "農業、林業和漁業工人",
+    "-1242914994": "工藝、金屬、電氣和電子工人",
+    "-1317824715": "清潔工和傭工",
+    "-1592729751": "礦業、建築業、製造業和運輸工人",
+    "-2137323480": "公司擁有權",
+    "-1590574533": "離婚協定",
+    "-1667683002": "繼承",
+    "-1237843731": "投資收入",
+    "-777506574": "財產出售",
+    "-692343440": "開立帳戶的原因是必填欄位",
+    "-1170778666": "稱呼為必填欄位",
+    "-228584268": "名字的長度必須介於2-30個字元。",
+    "-201790992": "出生日期為必填欄位",
+    "-26599672": "國籍為必填欄位",
+    "-1575444613": "電話號為必填欄位",
+    "-243149737": "電話號的長度必須介於8-35個數字。",
+    "-2046147698": "請填寫稅務居住地",
+    "-1356204661": "此稅務識別號(TIN) 無效。您可繼續開立帳戶的操作，但有必要提供有效的稅務資訊，使將來的付款程序更加方便。",
+    "-1823540512": "個人資料",
+    "-1227878799": "投機",
+    "-1174064217": "先生",
+    "-855506127": "女士",
+    "-1037916704": "小姐",
+    "-204765990": "使用條款",
     "-931052769": "提交驗證",
     "-1004605898": "提示",
     "-1938142055": "文檔已上傳",
@@ -1380,50 +1455,25 @@
     "-1462975230": "文檔示例",
     "-1472844935": "照片須清楚顯示您的文件",
     "-883103549": "帳戶已停用",
-    "-1823540512": "個人資料",
     "-1466827732": "自我禁止",
     "-1498206510": "帳戶限額",
     "-241588481": "登入歷史",
     "-966136867": "已連接的應用",
     "-213009361": "雙因素身份驗證",
     "-526636259": "錯誤 404",
-    "-2068544539": "支薪員工",
-    "-531314998": "投資與分紅",
-    "-1235114522": "退休金",
-    "-1298056749": "國家收益",
-    "-449943381": "儲蓄和繼承",
-    "-739367071": "就業",
-    "-996132458": "建構",
-    "-915003867": "健康",
-    "-1430012453": "資訊和通信技術",
-    "-987824916": "科學 & 工程",
-    "-146630682": "社會 & 文化",
-    "-761306973": "製造",
-    "-1631552645": "專業人士",
-    "-474864470": "個人護理、銷售及服務員工",
-    "-1129355784": "農業、林業和漁業工人",
-    "-1242914994": "工藝、金屬、電氣和電子工人",
-    "-1317824715": "清潔工和傭工",
-    "-1592729751": "礦業、建築業、製造業和運輸工人",
     "-1030759620": "政府官員",
-    "-2137323480": "公司擁有權",
-    "-1590574533": "離婚協定",
-    "-1667683002": "繼承",
-    "-1237843731": "投資收入",
-    "-777506574": "財產出售",
-    "-654781670": "主要",
-    "-1717373258": "次要",
-    "-1027595143": "少於$25,000",
-    "-40491332": "$25,000 - $50,000",
-    "-1139806939": "$50,001 - $100,000",
-    "-1156937070": "$500,001 - $1,000,000",
-    "-315534569": "大於$1,000,000",
-    "-626752657": "0-1 年",
-    "-532014689": "1-2 年",
-    "-1001024004": "3年以上",
-    "-790513277": "過去12個月內6-10次交易",
-    "-580085300": "過去12個月內11-39次交易",
-    "-1227878799": "投機",
+    "-1662154767": "近期的水電費帳單（例如電費、水費、煤氣費、固定電話費或互聯網費），銀行對帳單或政府簽發的帶有您的姓名和地址的信件。",
+    "-190838815": "We need this for verification. If the information you provide is fake or inaccurate, you won’t be able to deposit and withdraw.",
+    "-223216785": "Second line of address*",
+    "-594456225": "地址第二行",
+    "-1315410953": "州/省",
+    "-1940457555": "Postal/ZIP Code*",
+    "-1964954030": "郵遞區號",
+    "-1541554430": "下一頁",
+    "-71696502": "之前",
+    "-1146960797": "法定貨幣",
+    "-1959484303": "加密貨幣",
+    "-1319246342": "作為ERC20代幣（eUSDT）的Tether是託管在以太坊（任何人都可以構建和部署去中心化應用程式的開放軟體平台）上的Tether版本。",
     "-2087317410": "糟糕，出錯了。",
     "-433415967": "包含您的姓名和地址的近期銀行月結單或由政府出具的信函",
     "-587941902": "用您的名字和您的目前地址簽發",
@@ -1433,9 +1483,26 @@
     "-723198394": "文件大小不可大於8MB",
     "-1948369500": "上傳的文件不受支持",
     "-1040865880": "此處拖放文件...",
+    "-1100235269": "職業領域",
+    "-684388823": "估計淨值",
+    "-509054266": "預期的年交易額",
+    "-601903492": "外匯交易經驗",
+    "-1012699451": "差價合約交易經驗",
+    "-1437017790": "金融資料",
+    "-39038029": "交易經驗",
     "-38915613": "未儲存更改",
     "-2137450250": "您有未儲存更改。確定放棄更改並離開此頁面？",
     "-1067082004": "退出設定",
+    "-1120954663": "名*",
+    "-1659980292": "名",
+    "-1857534296": "John",
+    "-1485480657": "其他詳細資料",
+    "-1315571766": "出生地點",
+    "-2040322967": "公民身份",
+    "-1692219415": "納稅居住地",
+    "-1903720068": "您符合納稅條件的國家/地區。 通常是您實際居住的國家/地區。",
+    "-651516152": "稅務識別號碼",
+    "-1387062433": "開立帳戶的原因",
     "-1451334536": "繼續交易",
     "-1525879032": "您的地址證明文件已過期。請重新提交。",
     "-1425489838": "不需要地址證明驗證",
@@ -1451,6 +1518,20 @@
     "-1785463422": "身份驗證",
     "-337979330": "您的身份證明無法驗證",
     "-856213726": "您還需提交地址證明。",
+    "-1890437681": "上傳文件",
+    "-203002433": "立刻存款",
+    "-1768223277": "您的帳戶已就緒",
+    "-1614090004": "地址證明驗證失敗",
+    "-1703155190": "身份和地址證明驗證失敗",
+    "-1590597068": "您的身份和地址證明已成功提交",
+    "-1134947851": "開始交易前，我們需要您的身份和地址證明。",
+    "-1275327471": "無法驗證您的地址證明文件。您可以上傳新文檔，然後重試。",
+    "-1534810266": "無法驗證您的身份和地址證明文件。您可以上傳新文檔，然後重試。",
+    "-2073934245": "本網站所提供的金融交易服務僅適合這樣的客戶：能夠接受全部投入資金虧損的可能性，了解購買金融合約所蘊含的風險並擁有相關的風險經歷。金融合約交易涉及很大的風險。如果所購買的合約到期時一文不值，您的投資將完全損失，其中還包括合約費用。",
+    "-1970096931": "您的帳戶將通過 Deriv (Europe) Limited 開立，並由馬爾他博彩機構監管，以及受馬爾他的法律管轄。",
+    "-1988735853": "您的帳戶將通過 Deriv Investments (Europe) Limited 開立，並由馬爾他金融服務機構 (MFSA) 監管，以及受馬爾他的法律管轄。",
+    "-2068229627": "本人不是政治公眾人士，而且在過去的12個月中，我未曾當過政治公眾人士。",
+    "-1125193491": "新增帳戶",
     "-763249420": "{{page_title}} 頁面僅<0 />現有客戶可用。",
     "-207063174": "如果您有活躍的帳戶, 請<0>登入</0>以獲得完整的存取權限。否則請<1>註冊</1>以開始交易。",
     "-2139303636": "可能您使用的連結已無效，或該頁面已轉移到新地址。",
@@ -1458,30 +1539,16 @@
     "-1265833982": "接受",
     "-839094775": "返回",
     "-2145244263": "此為必填欄位",
-    "-1437017790": "金融資料",
-    "-1100235269": "職業領域",
-    "-684388823": "估計淨值",
-    "-39038029": "交易經驗",
-    "-601903492": "外匯交易經驗",
-    "-1012699451": "差價合約交易經驗",
     "-1894668798": "其他交易工具經驗",
     "-1026468600": "其他交易工具頻率",
     "-1651554702": "只允許字母",
     "-2128137611": "應以字母或數位開始，可包含連字號和底線。",
     "-1458676679": "您必須輸入2-50 個字元。",
     "-884768257": "您必須輸入0-35 個字元。",
-    "-1784470716": "州/區的格式不正確",
-    "-1699820408": "請輸入少於{{max_number}} 個字元的{{field_name}} 。",
-    "-1575567374": "郵遞區號",
     "-2113555886": "僅允許字母、數字、空格和連字符。",
     "-1113902570": "詳細資料",
-    "-1120954663": "名*",
-    "-1315571766": "出生地點",
-    "-2040322967": "公民身份",
     "-136976514": "居住國*",
-    "-1387062433": "開立帳戶的原因",
     "-789291456": "納稅居留地*",
-    "-1024240099": "地址",
     "-1702919018": "地址第二行",
     "-1958764604": "電子郵件設置",
     "-2068064150": "接收與 Deriv 產品、服務和活動有關的更新。",
@@ -1534,7 +1601,7 @@
     "-1900331904": "您將自動登出。",
     "-163034935": "您將 <0>無法</0> 再次登入。",
     "-1318334333": "停用",
-    "-1219849101": "Please select at least one reason",
+    "-1219849101": "請選擇至少一個原因",
     "-484540402": "發生錯誤",
     "-1911549768": "MT5 帳戶無法存取",
     "-1869355019": "需要展開行動",
@@ -1551,6 +1618,7 @@
     "-1738671831": "密碼長度必須是8-25個字元。",
     "-1776746512": "目前密碼和新密碼不能相同。",
     "-1465674403": "更改Deriv密碼",
+    "-1233938428": "We recommend using a unique password — one that you don’t use for any other sites.",
     "-1868608634": "目前密碼",
     "-89973258": "{{seconds}} 秒後重傳電子郵件",
     "-1617352279": "郵件在您的垃圾郵箱（有時一些郵件會誤送到那兒）。",
@@ -1672,8 +1740,6 @@
     "-1616649196": "結果",
     "-90107030": "未發現結果",
     "-984140537": "新增",
-    "-71696502": "之前",
-    "-1541554430": "下一頁",
     "-870004399": "<0>已購入</0>: {{longcode}} (ID: {{transaction_id}})",
     "-1211474415": "篩選器",
     "-186972150": "沒有要顯示的消息",
@@ -1757,31 +1823,8 @@
     "-1309011360": "空缺",
     "-679102561": "合約詳細資料",
     "-430118939": "控訴政策",
-    "-2059862173": "地址第1行是必填欄位",
-    "-1493533190": "地址的格式不正確",
-    "-1560151576": "城市的格式不正確",
-    "-378415317": "州/區為必填欄位",
-    "-755626951": "完成您的地址資料",
-    "-1461267236": "請選擇貨幣",
-    "-2024100696": "真實綜合",
-    "-744999940": "Deriv 帳戶",
-    "-1936757551": "Deriv 綜合",
-    "-1546927062": "Deriv 金融",
-    "-692343440": "開立帳戶的原因是必填欄位",
-    "-1170778666": "稱呼為必填欄位",
-    "-228584268": "名字的長度必須介於2-30個字元。",
-    "-201790992": "出生日期為必填欄位",
-    "-26599672": "國籍為必填欄位",
-    "-1575444613": "電話號為必填欄位",
-    "-243149737": "電話號的長度必須介於8-35個數字。",
-    "-2046147698": "請填寫稅務居住地",
-    "-1356204661": "此稅務識別號(TIN) 無效。您可繼續開立帳戶的操作，但有必要提供有效的稅務資訊，使將來的付款程序更加方便。",
-    "-1174064217": "先生",
-    "-855506127": "女士",
-    "-1037916704": "小姐",
     "-895331276": "請完成您的地址證明",
     "-782679300": "請完成您的身份證明",
-    "-204765990": "使用條款",
     "-1669418686": "澳元/加元",
     "-1548588249": "澳元/瑞士法郎",
     "-1552890620": "澳元/日圓",
@@ -1942,45 +1985,17 @@
     "-1829842622": "您可以為每種加密貨幣開立帳戶。",
     "-2120454054": "新增真實帳戶",
     "-987221110": "選擇您想要交易的貨幣。",
-    "-1959484303": "加密貨幣",
-    "-1125193491": "新增帳戶",
-    "-1146960797": "法定貨幣",
     "-252990905": "貨幣更改不可用，因為您已經將錢存入了{{currency}} 帳戶，或您已經建立了真實的 MetaTrader 5 (MT5) 帳戶。",
     "-200560194": "請切換到{{fiat_currency}} 帳戶以更改幣種。",
-    "-1662154767": "近期的水電費帳單（例如電費、水費、煤氣費、固定電話費或互聯網費），銀行對帳單或政府簽發的帶有您的姓名和地址的信件。",
-    "-594456225": "地址第二行",
-    "-1315410953": "州/省",
-    "-1964954030": "郵遞區號",
     "-1829493739": "選擇您想要交易的外匯。",
-    "-1319246342": "作為ERC20代幣（eUSDT）的Tether是託管在以太坊（任何人都可以構建和部署去中心化應用程式的開放軟體平台）上的Tether版本。",
-    "-509054266": "預期的年交易額",
     "-1215717784": "<0>您已成功將幣種改成{{currency}}。</0><0>請立刻存款，開始交易。</0>",
-    "-203002433": "立刻存款",
-    "-1890437681": "上傳文件",
-    "-1768223277": "您的帳戶已就緒",
-    "-1614090004": "地址證明驗證失敗",
-    "-1703155190": "身份和地址證明驗證失敗",
-    "-1590597068": "您的身份和地址證明已成功提交",
-    "-1134947851": "開始交易前，我們需要您的身份和地址證明。",
-    "-1275327471": "無法驗證您的地址證明文件。您可以上傳新文檔，然後重試。",
-    "-1534810266": "無法驗證您的身份和地址證明文件。您可以上傳新文檔，然後重試。",
     "-952649119": "登入",
     "-3815578": "註冊",
-    "-1659980292": "名",
-    "-1857534296": "John",
-    "-1485480657": "其他詳細資料",
-    "-1692219415": "納稅居住地",
-    "-1903720068": "您符合納稅條件的國家/地區。 通常是您實際居住的國家/地區。",
-    "-651516152": "稅務識別號碼",
     "-1456176427": "為您的真實帳戶設定幣種",
     "-259386249": "新增 Deriv 綜合帳戶",
     "-241733171": "新增 Deriv 金融帳戶",
     "-1369294608": "已經註冊?",
     "-617844567": "已有帳戶具有您的詳細資料。",
-    "-2073934245": "本網站所提供的金融交易服務僅適合這樣的客戶：能夠接受全部投入資金虧損的可能性，了解購買金融合約所蘊含的風險並擁有相關的風險經歷。金融合約交易涉及很大的風險。如果所購買的合約到期時一文不值，您的投資將完全損失，其中還包括合約費用。",
-    "-1970096931": "您的帳戶將通過 Deriv (Europe) Limited 開立，並由馬爾他博彩機構監管，以及受馬爾他的法律管轄。",
-    "-1988735853": "您的帳戶將通過 Deriv Investments (Europe) Limited 開立，並由馬爾他金融服務機構 (MFSA) 監管，以及受馬爾他的法律管轄。",
-    "-2068229627": "本人不是政治公眾人士，而且在過去的12個月中，我未曾當過政治公眾人士。",
     "-292363402": "交易統計報告",
     "-1656860130": "二元期權交易就像任何其他活動一樣，過於沉迷可能會上癮。為了避免發生此種風險，我們定期向您提供交易和財務的實況簡報。",
     "-28080461": "想先檢查一下您的月結單？ <0>檢查月結單</0>",
@@ -2188,12 +2203,16 @@
     "-382495564": "密碼已更改",
     "-2042845290": "您的投資者密碼已被更改。",
     "-1882295407": "您的密碼已被更改.",
+    "-985529779": "Your DMT5 password is now the same as your Deriv account login password. To reset, please go to <0>Settings</0> page to change your password.",
     "-254497873": "用此密碼給予其他使用者檢視權限。該使用者檢視您的交易帳戶時將無法交易或採取任何其他行動。",
     "-161656683": "目前投資者密碼",
     "-374736923": "新投資者密碼",
     "-1793894323": "建立或重設投資者密碼",
     "-1444706724": "管理 DMT5 真實{{account_title}} 帳戶密碼",
-    "-1880679339": "您的 MT5 金融 STP 帳戶將通過 Deriv（FX）Ltd 開立。該帳戶的所有交易均受 Labuan 金融服務管理局（LFSA）的規定和準則的約束。所有其他帳戶，包括您的衍生帳戶，均不受 Labuan 金融服務管理局（LFSA）的法規和準則的約束。",
+    "-1234339445": "All you’ll need from now is one password",
+    "-1418023997": "Unavailable because of too many failed attempts. Please try again in a minute or reset your account password to continue.",
+    "-140300511": "Please confirm your Deriv password to create a DMT5 account. If you’ve forgotten your password, click <0>Reset password</0>.",
+    "-1987408434": "Your MT5 Financial STP account will be opened through Deriv (BVI) Ltd. All trading in this account is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC).",
     "-1281078994": "選擇 DMT5 {{ account_type }} 帳戶的伺服器",
     "-1752211105": "立刻轉匯",
     "-2115960164": "重設 DMT5 密碼",
@@ -2206,6 +2225,9 @@
     "-1756858413": "<0></0>已記入您的 DMT5 {{title}} 帳戶 。",
     "-149993085": "目前新餘額",
     "-538215347": "淨存款",
+    "-280147477": "All transactions",
+    "-137444201": "買入",
+    "-360975483": "You've made no transactions of this type during this period.",
     "-1231210510": "跳動點",
     "-1239477911": "秒",
     "-1585766960": "最小",
@@ -2603,6 +2625,5 @@
     "-1521930919": "選擇Binary Bot 策略",
     "-845301264": "從 Google 雲端硬碟列出檔案時出錯",
     "-1452908801": "從 Google 雲端硬碟檢索檔案時出錯",
-    "-232617824": "處理您的請求時出錯",
-    "-137444201": "買入"
+    "-232617824": "處理您的請求時出錯"
 }
